<resources>
	<string name="app_name">Bed Control</string>
	<string name="on_off">ON / OFF</string>
	<string name="power">Power</string>
	<string name="red">RED</string>
	<string name="green">GREEN</string>
	<string name="blue">BLUE</string>
	<string name="ModeSmooth">Smooth</string>
	<string name="ModeStrobe">Strobe</string>
	<string name="ModeFade">Fade</string>
	<string name="modeFlash">Flash</string>
	<string name="ModeDefault">DEFAULT</string>
	<string name="modeWakeUp">Wake up</string>
</resources>
